[tool.poetry]
name = "hunting"
version = "0.1.0"
description = "Hunting is data profiling exposed as REST API. It is built on top of Pandas Profiling."
authors = ["Factly Media & Research"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
polars = {extras = ["numpy", "pandas", "pyarrow", "fsspec"], version = "^0.14.28"}
python-dotenv = "^0.19.1"
requests = "^2.26.0"
fsspec = "^2021.10.1"
pandas-profiling = "3.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.9.3"
black = "^22.3.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
   .eggs
  | .git
  | .venv
  | .cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
