[tool.poetry]
name = "hunting"
version = "0.1.0"
description = "Hunting is data profiling exposed as REST API. It is built on top of Pandas Profiling."
authors = ["Factly Media & Research"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.85.1"
uvicorn = "^0.19.0"
python-dotenv = "^0.21.0"
aioredis = "^2.0.1"
polars = {extras = ["numpy", "pandas", "pyarrow", "fsspec"], version = "0.14.28"}
motor = "^3.1.1"
s3fs = "^2022.11.0"
celery = "^5.2.7"
redis = "^4.3.4"
tornado = "^6.3.2"
flower = {git = "https://github.com/mher/flower.git"}
ydata-profiling = "^4.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.9.3"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.2"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
   .eggs
  | .git
  | .venv
  | .cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
