[tool.poetry]
name = "hunting"
version = "0.1.0"
description = "Hunting is data profiling exposed as REST API. It is built on top of Pandas Profiling."
authors = ["Factly Media & Research"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
python-dotenv = "^0.21.0"
aioredis = "^2.0.1"
motor = "^3.1.1"
s3fs = "^2022.11.0"
celery = "^5.3.6"
redis = "^4.3.4"
flower = "^1.2.0"
rich = "^13.5.2"
polars = {extras = ["fsspec", "numpy", "pandas", "pyarrow"], version = "^0.20.7"}
ydata-profiling = "4.6.0"
fastapi = "0.109.2"
uvicorn = "^0.23.2"


[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.9.3"
black = "^22.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
ipywidgets = "^8.1.0"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
   .eggs
  | .git
  | .venv
  | .cache
  | __pycache__
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
